--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Calculator</h1>
@@ -14,35 +15,35 @@
             <td colspan="4"><input type="text" id="display" disabled></td>
         </tr>
         <tr>
-             <td><button>1</button></td>
-             <td><button>2</button></td>
-             <td><button>3</button></td>
-             <td><button>+</button></td>          
+             <td><button onclick="appendToDisplay('1')">1</button></td>
+             <td><button onclick="appendToDisplay('2')">2</button></td>
+             <td><button onclick="appendToDisplay('3')">3</button></td>
+             <td><button onclick="appendToDisplay('+')">+</button></td>          
         </tr>
 
         <tr>
-            <td><button>4</button></td>
-            <td><button>5</button></td>
-            <td><button>6</button></td>
-            <td><button>-</button></td>          
+            <td><button onclick="appendToDisplay('5')">4</button></td>
+            <td><button onclick="appendToDisplay('6')">5</button></td>
+            <td><button onclick="appendToDisplay('7')">6</button></td>
+            <td><button onclick="appendToDisplay('-')">-</button></td>          
        </tr>
 
        <tr>
-           <td><button>7</button></td>
-           <td><button>8</button></td>
-           <td><button>9</button></td>
-           <td><button>*</button></td>          
+           <td><button onclick="appendToDisplay('7')">7</button></td>
+           <td><button onclick="appendToDisplay('8')">8</button></td>
+           <td><button onclick="appendToDisplay('9')">9</button></td>
+           <td><button onclick="appendToDisplay('*')">*</button></td>          
       </tr>
 
       <tr>
-         <td><button>0</button></td>
-         <td><button>C</button></td>
-         <td><button>=</button></td>
-         <td><button>/</button></td>          
+         <td><button onclick="appendToDisplay('0')">0</button></td>
+         <td><button onclick="clearDisplay()">C</button></td>
+         <td><button onclick="calculate()">=</button></td>
+         <td><button onclick="appendToDisplay('/')">/</button></td>          
       </tr>
 
 
     </table>
 </body>
-<script src="script.js"></script>
+
 </html>
