gave ids to all the elements inside the table

--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
             <td colspan="4"><input type="text" id="display" disabled></td>
         </tr>
         <tr>
-             <td><button onclick="appendToDisplay('1')">1</button></td>
-             <td><button onclick="appendToDisplay('2')">2</button></td>
-             <td><button onclick="appendToDisplay('3')">3</button></td>
-             <td><button onclick="appendToDisplay('+')">+</button></td>          
+             <td><button id="num" onclick="appendToDisplay('1')">1</button></td>
+             <td><button id="num" onclick="appendToDisplay('2')">2</button></td>
+             <td><button id="num" onclick="appendToDisplay('3')">3</button></td>
+             <td><button id="add" onclick="appendToDisplay('+')">+</button></td>          
         </tr>
 
         <tr>
-            <td><button onclick="appendToDisplay('5')">4</button></td>
-            <td><button onclick="appendToDisplay('6')">5</button></td>
-            <td><button onclick="appendToDisplay('7')">6</button></td>
-            <td><button onclick="appendToDisplay('-')">-</button></td>          
+            <td><button id="num" onclick="appendToDisplay('5')">4</button></td>
+            <td><button id="num" onclick="appendToDisplay('6')">5</button></td>
+            <td><button id="num" onclick="appendToDisplay('7')">6</button></td>
+            <td><button id="sub" onclick="appendToDisplay('-')">-</button></td>          
        </tr>
 
        <tr>
-           <td><button onclick="appendToDisplay('7')">7</button></td>
-           <td><button onclick="appendToDisplay('8')">8</button></td>
-           <td><button onclick="appendToDisplay('9')">9</button></td>
-           <td><button onclick="appendToDisplay('*')">*</button></td>          
+           <td><button id="num" onclick="appendToDisplay('7')">7</button></td>
+           <td><button id="num" onclick="appendToDisplay('8')">8</button></td>
+           <td><button id="num" onclick="appendToDisplay('9')">9</button></td>
+           <td><button id="times" onclick="appendToDisplay('*')">*</button></td>          
       </tr>
 
       <tr>
-         <td><button onclick="appendToDisplay('0')">0</button></td>
-         <td><button onclick="clearDisplay()">C</button></td>
-         <td><button onclick="calculate()">=</button></td>
-         <td><button onclick="appendToDisplay('/')">/</button></td>          
+         <td><button id="num" onclick="appendToDisplay('0')">0</button></td>
+         <td><button id="clear" onclick="clearDisplay()">C</button></td>
+         <td><button id="calc" onclick="calculate()">=</button></td>
+         <td><button id="div" onclick="appendToDisplay('/')">/</button></td>          
       </tr>
 
 
